--- a/Report.qmd
+++ b/Report.qmd
@@ -802,6 +802,12 @@ ggplot(le_rls_data, aes(x = resid)) +
   labs(y = "frequência", x = "resíduos")
 ```
 
+##### Conclusão
+
+Com os dados analisados podemos concluir que o modelo de regressão linear simples clássico de 1a. ordem não é adequado para modelar essas relações, pois não atende a todas as hipóteses necessárias para sua aplicação.
+
+O modelo do `Deaths Air Pollution` é o que mais se aproxima de um modelo de regressão linear simples clássico de 1a. ordem, pois atende a todas as hipóteses necessárias para sua aplicação, exceto a normalidade dos erros e da independência dos erros, mas esses desvios podem ser explicados pela existência de outliers. 
+
 2. Ajuste um modelo de regressão linear simples para a variável `happiness_cantril_ladder` como função de `deaths_air_pollution` após excluir as observações 973 (X = 237 e Y = 6.00), 974 (X = 234 e Y = 5.99) e 975 (X = 225 e Y = 5.97). Obtenha intervalos de previsão de 95% de confiança para novas observações que apresentam valores da variável explicativa iguais a 237, 234 e 225. As observações eliminadas encontram-se nos limites dos intervalos de previsão obtidos? Discuta o significado dos resultados obtidos.
 
 inicialmente precisamos excluir as observações 973, 974 e 975.
@@ -815,7 +821,7 @@ predict(hcl_dap, newdata = data.frame(deaths_air_pollution = c(237, 234, 225)), 
 
 ```	
 
-Podemos perceber que em um intervalo de confiança de 95% as observações as observações 973, 974 e 975 não estão nos limites dos intervalos de previsão. O que é um indício de que essas observações são outliers.
+Podemos perceber que em um intervalo de confiança de 95% as observações 973, 974 e 975 não estão nos limites dos intervalos de previsão. O que é um indício de que essas observações são outliers.
 
 3. Para os modelos considerando cada nível da variável `continent` no item (2) da seção anterior, realize o diagnóstico através da análise dos resíduos. Todos aparentam ter mesma variância dos erros? É necessário realizar alguma transformação de variáveis? Tente solucionar os possíveis problemas encontrados com o modelo. Que conclusões é possível obter a partir da análise?
 
