--- a/Report.qmd
+++ b/Report.qmd
@@ -15,6 +15,7 @@ execute:
 
 ```{r include = FALSE}
 library(tidyverse)
+library(dplyr)
 library(gridExtra)
 library(lmtest)
 library(MASS)
@@ -111,7 +112,7 @@ labs(x = "Eletricity Demand (TWh)", y = "Life Expectancy (years)")
 ```{r}
 ggplot(owid, aes(y = life_expectancy, x = 1/electricity_demand)) +
 geom_point() +
-labs(x = "1/Ele(tricity Demand (1/TWh)", y = "Life Expectancy (years)")
+labs(x = "1/Eletricity Demand (1/TWh)", y = "Life Expectancy (years)")
 ```
 
 ```{r}
@@ -1677,7 +1678,7 @@ Podemos  perceber principalmente no gráfico de quartis que o modelo II possui u
 Utilize o procedimento para construir modelos de regressão para a resposta expectativa de vida (`life_expectancy`), considerando um dos conjuntos de variáveis explicativas: 
 
 **Conjunto I:** `continent`, `birth_rate`, `expected_schooling` e `milk_consumption_pc` (e/ou transformações) 
-**Conjunto II:** `continent`m `gdp_pc`, `no_water` e `urban_population_percent` (e/ou transformações)
+**Conjunto II:** `continent`, `gdp_pc`, `no_water` e `urban_population_percent` (e/ou transformações)
 
 Considere apenas o ano de 2015 e exclua o continente 'Oceania'.
 
@@ -1685,13 +1686,256 @@ Lembre-se que os passos apropriados em análise de regressão consistem em:
 
 **construção do modelo**
 
-+ formulação e ajuste do modelo  
+O conjunto II será escolhido:
+
+```{r}
+filter_owid <- owid %>% filter(year == 2015, continent != "Oceania")
+filter_owid <- filter_owid[, c(1, 17, 18, 20, 21)]
+
+summary(filter_owid)
+```
+
++ formulação e ajuste do modelo
+
+```{r}
+plot(filter_owid)
+```
+
+Iremos considerar uma relação linear de `life_expectancy` com `no_water` e `urban_population_percenet`. É preciso investigar a relação com `gdp_pc`.
+
+```{r}
+ggplot(filter_owid, aes(y = life_expectancy, x = log(gdp_pc))) +
+geom_point() +
+labs(x = "log(GDP)", y = "Life Expectancy (years)")
+```
+
+A relação de `log(gdp_pc)` e `life_expectancy` parece ser linear, essa alteração será feita para a construção do modelo.
+
+```{r}
+filter_owid <- filter_owid %>% mutate(log_gdp_pc = log(gdp_pc))
+filter_owid <- filter_owid[, c(1, 3, 4, 5, 6)]
+summary(filter_owid)
+```
+
+```{r}
+cor(filter_owid$no_water, filter_owid$no_water^2)
+cor(filter_owid$urban_population_percent, filter_owid$urban_population_percent^2)
+cor(filter_owid$log_gdp_pc, filter_owid$log_gdp_pc^2)
+```
+
+centralização das variáveis explicativas
+
+```{r}
+filter_owid <- filter_owid %>%
+  mutate(no_water_c = no_water - mean(no_water), 
+         urban_population_c = urban_population_percent - mean(urban_population_percent),
+         log_gdp_c = log_gdp_pc - mean(log_gdp_pc))
+
+cor(filter_owid$no_water_c, filter_owid$no_water_c^2)
+cor(filter_owid$urban_population_c, filter_owid$urban_population_c^2)
+cor(filter_owid$log_gdp_c, filter_owid$log_gdp_c^2)
+```
+
+A correção de `no_water_c` ainda está, das demais variáveis foi reduzida.
 
 Devemos utilizar o seguinte procedimento:
 
 1. inclusão de termos contendo as variáveis quantitativas (polinomiais, transformações, interações, etc.);
+
+```{r}
+m_quant <- lm(life_expectancy ~ I(no_water_c^2) + I(urban_population_c^2) + I(log_gdp_c^2) + no_water_c * urban_population_c + no_water_c * log_gdp_c + urban_population_c * log_gdp_c, data = filter_owid)
+
+# resumo do modelo 
+summary(m_quant)
+```
+
+
+O modelo passou no teste-F global, não há grandes diferenças entre $R^2$ e $R^2$ ajustado. Os termos quadráticos não são significativos, como esperado. Além disso, os termos de interação e `urban_population_c` também não parecem ser significativos.
+
+```{r}
+m_quant_red <- lm(life_expectancy ~  no_water_c + log_gdp_c, data = filter_owid)
+
+summary(m_quant_red)
+```
+O modelo reduzido é significativo. Vamos realizar o teste linear geral.
+
+```{r}
+anova(m_quant_red, m_quant, test = "F")
+```   
+
+O valor-p é menor que 0.05, logo é possível rejeitar a hipótese nula.
+
+Vamos adicionar `urban_population_c` e o termo de intereção entre `no_water_c` `log_gdp_c` ao modelo. Esses termos serão adicionados por serem os que possuem menor valor-p, que estão acima de 0.05.
+
+```{r}
+m_quant_red <- lm(life_expectancy ~ urban_population_c + no_water_c * log_gdp_c, data = filter_owid)
+
+summary(m_quant_red)
+```
+
+```{r}
+anova(m_quant_red, m_quant, test = "F")
+```   
+
+Veja que agora o valor-p é maior que 0.05, logo não é possível rejeitar a hipótese nula. Dessa forma, é possível utilizar o modelo reduzido com segurança dessa decisão.
+
+A agora será a realizado a análise de resíduos.
+
+```{r}
+# Constrói tabela com dados do modelo `m_quant_red`
+owid_m_quant_red_data <- filter_owid %>%
+  # inclui coluna com valores ajustados
+  mutate(fitted = m_quant_red$fit) %>%
+  mutate(resid = m_quant_red$res)
+
+# Gera gráficos dos resíduos:
+ggplot(owid_m_quant_red_data, aes(x = fitted, y = resid)) +
+  geom_point() +
+  geom_hline(yintercept = 0, linetype = "dashed") +
+  ggtitle("gráfico de resíduos: modelo life_expectancy ~ urban_population_c + no_water_c * log_gdp_c") +
+  labs(y = "resíduos", x = "resposta ajustada (life_expectancy)")
+# Gráfico de quantis
+ggplot(owid_m_quant_red_data, aes(sample = resid)) +
+  stat_qq() + stat_qq_line() +
+  ggtitle("gráfico de quantis normais") +
+  labs(y = "quantis amostrais", x = "quantis teóricos (dist. normal)") 
+```
+
+É possível ver uma tendência não linear no gráficos dos resíduos, uma transformação da resposta ajustada possa resolver esse problema. As outras hipóteses não parecem ter sido violadas.
+
+Há uma certa fuga da normalidade, pelo gráfico dos quantis normais, mas sem grandes devios.
+
+```{r}
+# Teste de Homoscedasticidade de Breusch-Pagan
+# Ho: sigma^2  = cte
+# Ha: sigma^2 != cte
+
+bptest(m_quant_red)
+
+# Teste de Normalidade de Shapiro-Wilk
+# Ho: normal
+# Ha: não-normal
+
+shapiro.test(owid_m_quant_red_data$resid)
+```
+
+Os valores-p de ambos os testes são abaixo de 0.05, então as hipóteses nulas podem ser rejetitadas. Então a variância dos resíduos não é constante e há violação da normalidade.
+
+```{r}
+bc <- boxcox(m_quant_red, 
+             lambda = seq(-10, 10, by = 0.1), plotit = TRUE)
+```
+
+```{r}
+lambda <- bc$x[which.max(bc$y)]
+```
+
+O valor de $\lambda$ que maximiza a função de verossemelhança vale `r round(lambda, digits = 2)`, ou seja, a transformção Box-Cox sugere realizar a transformação $Y' = Y^3$.
+
+```{r}
+filter_owid <-  filter_owid %>%
+  mutate(life_expectancy_bc = life_expectancy^3)
+
+bc_model <- lm(life_expectancy_bc ~ urban_population_c + no_water_c * log_gdp_c, data = filter_owid)
+
+summary(bc_model)
+```
+
+```{r}
+# Constrói tabela com dados do modelo `m_quant_red`
+owid_m_quant_red_data <- filter_owid %>%
+  # inclui coluna com valores ajustados
+  mutate(fitted = m_quant_red$fit) %>%
+  mutate(resid = m_quant_red$res)
+
+# Gera gráficos dos resíduos:
+ggplot(owid_m_quant_red_data, aes(x = fitted, y = resid)) +
+  geom_point() +
+  geom_hline(yintercept = 0, linetype = "dashed") +
+  ggtitle("gráfico de resíduos: modelo life_expectancy ~ urban_population_c + no_water_c * log_gdp_c") +
+  labs(y = "resíduos", x = "resposta ajustada (life_expectancy)")
+# Gráfico de quantis
+ggplot(owid_m_quant_red_data, aes(sample = resid)) +
+  stat_qq() + stat_qq_line() +
+  ggtitle("gráfico de quantis normais") +
+  labs(y = "quantis amostrais", x = "quantis teóricos (dist. normal)") 
+```
+
+A tendência não linear dos resíduos aparenta ser sumido.
+Ainda há violações da normalidade perto das pontas da distribuição.
+
+```{r}
+# Teste de Homoscedasticidade de Breusch-Pagan
+# Ho: sigma^2  = cte
+# Ha: sigma^2 != cte
+
+bptest(m_quant_red)
+
+# Teste de Normalidade de Shapiro-Wilk
+# Ho: normal
+# Ha: não-normal
+
+shapiro.test(owid_m_quant_red_data$resid)
+```
+
+Os valores-p dos testes não se alteram muito, indicando que ainda há violação da normalidade e que a variância não é constante.
+
 2. inclusão de variáveis qualitativas e suas interações;
+
+Como há apenas uma variável qualitativa, não haverá adicição de termos de intereção no momento.
+
+```{r}
+m_quali <- lm(life_expectancy ~ urban_population_c + no_water_c * log_gdp_c + continent, data = filter_owid)
+
+summary(m_quali)
+```
+
+Pela estatística F do teste global, o modelo continua signifivativo. Além disso, todas as variáveis *dummies* associadas a `continent` também são significativas, pelo valor-p do test-t.
+
+```{r}
+anova(m_quali)
+```
+
+Veja que há significância incremental de todos os termos, a pesar de haver uma redução, que é esperado, mas todos os testes-F possuem valor significativo.
+
 3. inclusão de interações entre termos contendo variáveis quantitativas e qualitativas;
+
+```{r}
+ggplot(filter_owid, aes(x = urban_population_c, y = life_expectancy)) +
+  geom_point(aes(color = continent, shape = continent)) + 
+  geom_smooth(aes(color = continent), method = "lm", se = FALSE) +
+  ggtitle("`life_expectancy` x `urban_population_c`, para diferentes níveis de `continent`")
+ggplot(filter_owid, aes(x = no_water_c, y = life_expectancy)) +
+  geom_point(aes(color = continent, shape = continent)) + 
+  geom_smooth(aes(color = continent), method = "lm", se = FALSE) +
+  ggtitle("`life_expectancy` x `no_water_c`, para diferentes níveis de `continent`")
+ggplot(filter_owid, aes(x = log_gdp_c, y = life_expectancy)) +
+  geom_point(aes(color = continent, shape = continent)) + 
+  geom_smooth(aes(color = continent), method = "lm", se = FALSE) +
+  ggtitle("`life_expectancy` x `log_gdp_c`, para diferentes níveis de `continent`")
+```
+
+Pelos gráficos não parece haver uma forte relação entre `urban_population_c` e `continent`. O mesmo ococrre para `log_gdp_c`. Para `no_water_c` parece haver uma mudança da inclinação. Isso será melhor analisados com as estatísticas apropriadas.
+
+```{r}
+m_all <- lm(life_expectancy ~ no_water_c * log_gdp_c +  urban_population_c * continent + continent * no_water_c + log_gdp_c * continent, data = filter_owid)
+
+summary(m_all)
+```
+
+Pelo teste-F global o modelo é significativo, mas houve uma redução da estatística $R^2$ ajustado. Nenhum termo de interação adicional é significativo.
+
+```{r}
+anova(m_all)
+```
+
+Veja que há pouquíssima adição dos termos de interação com `continent` e as demais variáveis explicativas quantitativas. Vamos utilizar o teste linear geral para avaliar a significância desses termos adicionais.
+
+```{r}
+anova(m_quali, m_all, test = "F")
+```  
+
+Veja que o valor-p da estatística-F é quase 1, logo não é possível rejeitar a hipótese nula. Dessa forma, não serão adicionados os termos de interação de `continent` com as demais variáveis quantitativas.
 
 **avaliação do modelo**
 
